# ReadSightPy

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
src/readsight/: __init__.py  config.py  engine.py  exceptions.py
src/readsight/data/languages/: af.json  ar.json  as.json  be.json  bg.json  bn.json  ca.json  cop.json  cs.json  cu.json  cy.json  da.json  de-1901.json  de-1996.json  de-ch-1901.json  el-monoton.json  el-polyton.json  en-gb.json  en-us.json  eo.json  es.json  et.json  eu.json  fa.json  fi-x-school.json  fi.json  fr.json  fur.json  ga.json  gl.json  grc.json  gu.json  he.json  hi.json  hr.json  hsb.json  hu.json  hy.json  ia.json  id.json  (+46 more)
src/readsight/data/patterns/: hyph-cop.tex
src/readsight/formula/: automated_readability_index.py  coleman_liau.py  crawford.py  dale_chall.py  fernandez_huerta.py  flesch_kincaid_grade_level.py  flesch_reading_ease.py  fog_pl.py  formula.py  formula_registry.py  formula_registry_factory.py  formula_result.py  grade_level_interpretation.py  gulpease.py  gunning_fog.py  gutierrez_polini.py  lix.py  osman.py  smog_index.py  spache.py  szigriszt_pazos.py  text_statistics_helper.py  wiener_sachtextformel.py
src/readsight/hyphenation/: hyphenation_exceptions_collection.py  hyphenation_override.py  hyphenator.py  liang_hyphenator.py  pattern.py  patterns_collection.py
src/readsight/hyphenation/cache/: json_pattern_cache.py  pattern_cache.py
src/readsight/hyphenation/source/: pattern_source.py  tex_source.py
src/readsight/language/: json_language_repository.py  language.py  language_code.py  language_repository.py  script.py
src/readsight/syllable/: composite_syllable_counter.py  heuristic_syllable_counter.py  syllable_counter.py  tex_syllable_counter.py
src/readsight/text/: text_analyzer.py  text_splitter.py  text_statistics.py
tests/: conftest.py
tests/fixtures/patterns/: hyph-en-minimal.hyp.txt  hyph-en-minimal.pat.txt
tests/fixtures/text/: german-sample.txt  russian-sample.txt
tests/integration/: test_readsight_integration.py
tests/unit/formula/: test_helpers.py  test_language_formulas.py  test_universal_formulas.py
tests/unit/hyphenation/: test_hyphenation_exceptions.py  test_json_pattern_cache.py  test_liang_hyphenator.py  test_patterns_collection.py
tests/unit/language/: test_json_language_repository.py  test_language.py  test_language_code.py
tests/unit/syllable/: test_composite_syllable_counter.py  test_heuristic_syllable_counter.py
tests/unit/text/: test_text_analyzer.py  test_text_splitter.py
